--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,18 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker-compose -f docker-compose-build.yaml build --parallel
+
+  - docker build -t udagram-frontend ./udagram-frontend
+  - docker tag udagram-frontend feliciodeangela/frontend
+
+  - docker build -t reverseproxy ./reverseproxy
+  - docker tag reverseproxy feliciodeangela/reverseproxy
+
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker tag udagram-api-user feliciodeangela/udagram-api-user
+
+  - docker build -t udagram-api-feed ./udagram-api-feed
+  - docker tag udagram-api-feed feliciodeangela/udagram-api-feed
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
