travis up reverseproxy fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - docker build -t udagram-frontend ./udagram-frontend
   - docker tag udagram-frontend feliciodeangela/frontend
 
-  - docker build -t reverseproxy ./reverseproxy
+  - docker build -t reverseproxy ./udagram-reverseproxy
   - docker tag reverseproxy feliciodeangela/reverseproxy
 
   - docker build -t udagram-api-user ./udagram-api-user
