travis up frontend fix#3

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push feliciodeangela/udagram-api-user
   - docker push feliciodeangela/udagram-api-feed
-  - docker push feliciodeangela/udagram-frontend:local
+  - docker push feliciodeangela/udagram-frontend
   - docker push feliciodeangela/reverseproxy
