--- a/udagram-deployment/backend-feed-deployment.yaml
+++ b/udagram-deployment/backend-feed-deployment.yaml
@@ -2,27 +2,34 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-feed
+  labels:
+    app: backend-feed
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: backend-feed
+      app: backend-feed
   template:
     metadata:
       labels:
-        run: backend-feed
+        app: backend-feed
     spec:
       containers:
         - name: udagram-api-feed
           image: docker.io/feliciodeangela/udagram-api-feed
           ports:
-            - containerPort: 80
+            - containerPort: 8080
           resources:
             limits:
-              cpu: 800m
+              cpu: 500m
             requests:
-              cpu: 400m
+              cpu: 200m
           env:
+            - name: AWS_PROFILE
+              valueFrom:
+                configMapKeyRef:
+                  name: env-config
+                  key: AWS_PROFILE
             - name: POSTGRES_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -63,3 +70,12 @@ spec:
                 configMapKeyRef:
                   name: env-config
                   key: URL
+          volumeMounts:
+            - name: aws-secret
+              mountPath: "/root/.aws/"
+              readOnly: true
+      restartPolicy: Always
+      volumes:
+        - name: aws-secret
+          secret:
+            secretName: aws-secret
