--- a/udagram-deployment/backend-feed-service.yaml
+++ b/udagram-deployment/backend-feed-service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: backend-feed
+    run: backend-feed
   name: backend-feed
 spec:
   ports:
-    - name: "8080"
-      port: 8080
+    - port: 8080
       targetPort: 8080
+      protocol: TCP
   selector:
-    service: backend-feed
+    run: backend-feed
