--- a/udagram-deployment/backend-user-deployment.yaml
+++ b/udagram-deployment/backend-user-deployment.yaml
@@ -2,26 +2,28 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-user
+  labels:
+    app: backend-user
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: backend-user
+      app: backend-user
   template:
     metadata:
       labels:
-        run: backend-user
+        app: backend-user
     spec:
       containers:
         - name: udagram-api-user
           image: docker.io/feliciodeangela/udagram-api-user
           ports:
-            - containerPort: 80
+            - containerPort: 8080
           resources:
             limits:
-              cpu: 800m
+              cpu: 500m
             requests:
-              cpu: 400m
+              cpu: 200m
           env:
             - name: POSTGRES_USERNAME
               valueFrom:
@@ -58,8 +60,22 @@ spec:
                 configMapKeyRef:
                   name: env-config
                   key: JWT_SECRET
+            - name: AWS_PROFILE
+              valueFrom:
+                configMapKeyRef:
+                  name: env-config
+                  key: AWS_PROFILE
             - name: URL
               valueFrom:
                 configMapKeyRef:
                   name: env-config
                   key: URL
+          volumeMounts:
+            - name: aws-secret
+              mountPath: "/root/.aws/"
+              readOnly: true
+      restartPolicy: Always
+      volumes:
+        - name: aws-secret
+          secret:
+            secretName: aws-secret
