--- a/udagram-deployment/frontend-deployment.yaml
+++ b/udagram-deployment/frontend-deployment.yaml
@@ -2,64 +2,25 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
+  labels:
+    app: frontend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      run: frontend
+      app: frontend
   template:
     metadata:
       labels:
-        run: frontend
+        app: frontend
     spec:
       containers:
         - name: frontend
           image: docker.io/feliciodeangela/udagram-frontend
           ports:
-            - containerPort: 80
+            - containerPort: 8100
           resources:
             limits:
               cpu: 400m
             requests:
               cpu: 200m
-          env:
-            - name: URL
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: URL
-            - name: POSTGRES_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: env-secret
-                  key: POSTGRES_USERNAME
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: env-secret
-                  key: POSTGRES_PASSWORD
-            - name: POSTGRES_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: POSTGRES_HOST
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: POSTGRES_DB
-            - name: AWS_BUCKET
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: AWS_BUCKET
-            - name: AWS_REGION
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: AWS_REGION
-            - name: JWT_SECRET
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: JWT_SECRET
