--- a/udagram-deployment/frontend-service.yaml
+++ b/udagram-deployment/frontend-service.yaml
@@ -6,7 +6,7 @@ metadata:
     run: frontend
 spec:
   ports:
-    - port: 80
-      protocol: TCP
+    - port: 8100
+      targetPort: 8100
   selector:
     run: frontend
