--- a/udagram-deployment/reverseproxy-service.yaml
+++ b/udagram-deployment/reverseproxy-service.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: reverseproxy
   labels:
-    service: reverseproxy
+    run: reverseproxy
 spec:
   ports:
-    - name: "8080"
-      port: 8080
+    - port: 8080
       targetPort: 8080
   selector:
-    service: reverseproxy
+    run: reverseproxy
